도메인 설정
연관관계 매핑

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQL10Dialect
   profiles:
-    active: db
+    active: db, security
 
 server:
   port: 8080
